--- a/Bracez/ui/editor/EditorWindow.xib
+++ b/Bracez/ui/editor/EditorWindow.xib
@@ -793,7 +793,7 @@
                                                                                             <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
                                                                                             <clipView key="contentView" drawsBackground="NO" id="9IZ-fS-urd">
                                                                                                 <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
-                                                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                                                <autoresizingMask key="autoresizingMask"/>
                                                                                                 <subviews>
                                                                                                     <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" allowsCharacterPickerTouchBarItem="NO" textCompletion="NO" id="ULP-Sd-xav" customClass="SyntaxEditingField">
                                                                                                         <rect key="frame" x="0.0" y="0.0" width="261" height="78"/>
@@ -871,7 +871,7 @@
                                                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
                                                                                         <clipView key="contentView" drawsBackground="NO" id="7L0-FR-TwL">
                                                                                             <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
-                                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                                            <autoresizingMask key="autoresizingMask"/>
                                                                                             <subviews>
                                                                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="40" viewBased="YES" id="S9U-TC-mCd">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="344"/>
@@ -1121,14 +1121,14 @@
                         </connections>
                     </toolbarItem>
                     <toolbarItem implicitItemIdentifier="15D9F7CA-7C46-4C9D-9F26-8A2219D104D3" label="Utility Panel" paletteLabel="Utility Panel" toolTip="Show/hide utility panel" sizingBehavior="auto" id="IQ1-wQ-0eh">
-                        <imageReference key="image" image="sidebar.right" catalog="system" symbolScale="large" renderingMode="original"/>
+                        <imageReference key="image" image="sidebar.right" catalog="system" symbolScale="large"/>
                         <button key="view" verticalHuggingPriority="750" id="DeP-Qk-2bf">
-                            <rect key="frame" x="18" y="14" width="35" height="23"/>
+                            <rect key="frame" x="26" y="16" width="30" height="23"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <buttonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="e2x-t0-fx7">
-                                <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                 <font key="font" metaFont="system"/>
-                                <imageReference key="image" image="sidebar.right" catalog="system" symbolScale="large" renderingMode="original"/>
+                                <imageReference key="image" image="sidebar.right" catalog="system" symbolScale="large"/>
                             </buttonCell>
                             <connections>
                                 <binding destination="4" name="value" keyPath="selection.showNavPanel" id="NZR-WN-zDl"/>
@@ -1331,7 +1331,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="455" y="236"/>
+            <point key="canvasLocation" x="865" y="46"/>
         </menu>
     </objects>
     <resources>
