--- a/Bracez/ui/editor/ProjectionTableCell.xib
+++ b/Bracez/ui/editor/ProjectionTableCell.xib
@@ -9,23 +9,32 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <tableCellView id="wwi-Sh-YH3">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="14"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="19"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mQ5-1V-39e">
-                    <rect key="frame" x="0.0" y="-2" width="100" height="16"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="p9M-wU-cSQ">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="mQ5-1V-39e">
+                    <rect key="frame" x="-2" y="0.0" width="104" height="19"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="19" id="cA6-nx-a9K"/>
+                    </constraints>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" usesSingleLineMode="YES" id="p9M-wU-cSQ">
                         <font key="font" size="10" name="Monaco"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
             </subviews>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="mQ5-1V-39e" secondAttribute="bottom" id="GqH-yE-OfA"/>
+                <constraint firstItem="mQ5-1V-39e" firstAttribute="centerY" secondItem="wwi-Sh-YH3" secondAttribute="centerY" id="Mnz-eO-As6"/>
+                <constraint firstAttribute="trailing" secondItem="mQ5-1V-39e" secondAttribute="trailing" id="OEV-2b-i4t"/>
+                <constraint firstItem="mQ5-1V-39e" firstAttribute="leading" secondItem="wwi-Sh-YH3" secondAttribute="leading" id="xUv-Y7-yRA"/>
+                <constraint firstItem="mQ5-1V-39e" firstAttribute="top" secondItem="wwi-Sh-YH3" secondAttribute="top" id="yDi-De-d3W"/>
+            </constraints>
             <connections>
                 <outlet property="textField" destination="mQ5-1V-39e" id="Q3j-OX-Ze9"/>
             </connections>
-            <point key="canvasLocation" x="46" y="149"/>
+            <point key="canvasLocation" x="44" y="151.5"/>
         </tableCellView>
     </objects>
 </document>
